--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ jzmq.enabled=true
 rabbitmq.java.client.enabled=false
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/jzmq_consumer?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/jzmq_consumer?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=ozzrules
 
