--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ jeromq.enabled=false
 jzmq.enabled=true
 rabbitmq.java.client.enabled=false
 
+# threads
+multi.thread.enabled=false
+
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/jzmq_consumer?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
