--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,12 @@ spring.datasource.username=root
 spring.datasource.password=ozzrules
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
+
+
+# To set logs level as per your need.
+logging.level.org.springframework=INFO
+logging.level.com.msc.spring.producer=INFO
+
+# To store logs to external file
+# Here use strictly forward "/" slash for both Windows, Linux or any other os, otherwise, your logs it won't work.
+logging.file=jzmq-consumer.log
