--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # To set logs level as per your need.
 logging.level.org.springframework=INFO
-logging.level.com.msc.spring.producer=INFO
+logging.level.com.msc.spring.consumer=INFO
 
 # To store logs to external file
 # Here use strictly forward "/" slash for both Windows, Linux or any other os, otherwise, your logs it won't work.
